fix: layout shift from hiding scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,15 +68,20 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border;    
   }
   body {
     @apply bg-background text-foreground;
+  }
+  html{
+    overflow-y: scroll;
   }
 }
 
 .no-scroll {
   overflow: hidden;
-  position: fixed;
+  position: fixed; 
   width: 100%;
 }
+
+
